# highboy_ir

./: .gitignore  CMakeLists.txt
components/ir/: CMakeLists.txt  ir_decoder.c  ir_file.c  ir_manager.c  ir_path.c  ir_processor.c  ir_protocol.c  ir_receiver.c
components/ir/include/: ir_decoder.h  ir_file_generator.h  ir_manager.h  ir_path.h  ir_processor.h  ir_protocol.h  ir_receiver.h  ir_transmitter.h
components/ir_debug/: CMakeLists.txt  ir_debug.c
components/ir_decoder/: CMakeLists.txt
components/ir_encoder/: CMakeLists.txt  ir_encoder.c
components/ir_file/: CMakeLists.txt  ir_file.c
components/ir_file_generator/: CMakeLists.txt  ir_file_generator.c
components/ir_manager/: CMakeLists.txt  ir_manager.c
components/ir_manager/include/: ir_manager.h
components/ir_path/: CMakeLists.txt
components/ir_processor/: CMakeLists.txt  ir_processor.c
components/ir_processor/include/: ir_processor.h
components/ir_protocol/: CMakeLists.txt
components/ir_receiver/: CMakeLists.txt  ir_receiver.c
components/ir_transmitter/: CMakeLists.txt  ir_transmitter.c
main/: CMakeLists.txt  ir_common.c  ir_common.h  ir_protocol.c  ir_protocol.h  ir_protocol_nec.c  ir_protocol_nec.h  ir_protocol_rc6.c  ir_protocol_rc6.h  ir_rx.c  ir_rx.h  ir_tx.c  ir_tx.h  main.c  signal.json
use_cases/: CMakeListsa.txt  ciclo_receive_completo.txt  geral.txt  ir_encoder.txt  ir_file.txt  ir_parser.txt  ir_path.txt  ir_produção_receive.txt  ir_protocol.txt  main-ir-complete.txt  receiver.txt  test.txt  teste_ir_produção_transmit.txt  transmitter.txt
(+4 files in other folders)
